updated bibliography and changed style.

--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -3,8 +3,8 @@
 	title = "{The TLS Protocol Version 1.0}",
 	month = "January",
 	year = "1999",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc2246.txt}",
-	url = "http://www.ietf.org/rfc/rfc2246.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc2246}",
+	url = "http://www.ietf.org/rfc/rfc2246"
 }
 
 @Misc{ RFC4514,
@@ -12,8 +12,17 @@
 	title = "{Lightweight Directory Access Protocol (LDAP): String Representation of Distinguished Names}",
 	month = "June",
 	year = "2006",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc4514.txt}",
-	url = "http://www.ietf.org/rfc/rfc4514.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc4514}",
+	url = "http://www.ietf.org/rfc/rfc4514"
+}
+
+@Misc{ RIVESTCRL,
+	author = "R. L. Rivest",
+	title = "{Can We Eliminate Certificate Revocation Lists?}",
+	month = "February",
+	year = "1998",
+	note = "Available from \url{http://people.csail.mit.edu/rivest/Rivest-CanWeEliminateCertificateRevocationLists.pdf}",
+	url = "http://people.csail.mit.edu/rivest/Rivest-CanWeEliminateCertificateRevocationLists.pdf"
 }
 
 @misc{RFC3820,
@@ -23,6 +32,15 @@
   year=2004, 
   note = "Available from \url{http://www.ietf.org/rfc/rfc3820}",
   url = "http://www.ietf.org/rfc/rfc3820"
+}
+
+@misc{RFC2560,
+  author="M. Myers and R. Ankney and A. Malpani and S. Galperin and C. Adams",
+  title="{X.509 Internet Public Key Infrastructure Online Certificate Status Protocol - OCSP}", 
+  month="June",
+  year=1999, 
+  note = "Available from \url{http://www.ietf.org/rfc/rfc2560}",
+  url = "http://www.ietf.org/rfc/rfc2560"
 }
 
 @misc{RFC5746,
@@ -70,8 +88,8 @@
 	title = "{The TLS Protocol Version 1.2}",
 	month = "August",
 	year = "2008",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc5246.txt}",
-	url = "http://www.ietf.org/rfc/rfc5246.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc5246}",
+	url = "http://www.ietf.org/rfc/rfc5246"
 }
 
 @Misc{ WEGER,
@@ -88,8 +106,8 @@
 	title = "Transport Layer Security Protocol Compression Methods",
 	month = "May",
 	year = "2004",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc3749.txt}",
-	url = "http://www.ietf.org/rfc/rfc3749.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc3749}",
+	url = "http://www.ietf.org/rfc/rfc3749"
 }
 
 @Misc{ RFC4347,
@@ -97,8 +115,8 @@
 	title = "Datagram Transport Layer Security",
 	month = "April",
 	year = "2006",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc4347.txt}",
-	url = "http://www.ietf.org/rfc/rfc4347.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc4347}",
+	url = "http://www.ietf.org/rfc/rfc4347"
 }
 
 @Misc{ RFC4346,
@@ -106,8 +124,8 @@
 	title = "The {TLS} Protocol Version 1.1",
 	month = "April",
 	year = "2006",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc4346.txt}",
-	url = "http://www.ietf.org/rfc/rfc4346.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc4346}",
+	url = "http://www.ietf.org/rfc/rfc4346"
 }
 
 @Misc{ RFC2440,
@@ -115,8 +133,8 @@
 	title = "{OpenPGP} Message Format",
 	month = "November",
 	year = "2007",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc4880.txt}",
-	url = "http://www.ietf.org/rfc/rfc4880.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc4880}",
+	url = "http://www.ietf.org/rfc/rfc4880"
 }
 
 @Misc{ RFC2511,
@@ -124,8 +142,8 @@
 	title = "Internet {X.509} Certificate Request Message Format",
 	month = "March",
 	year = "1999",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc2511.txt}",
-	url = "http://www.ietf.org/rfc/rfc2511.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc2511}",
+	url = "http://www.ietf.org/rfc/rfc2511"
 }
 
 @Misc{ RFC2817,
@@ -133,8 +151,8 @@
 	title = "Upgrading to {TLS} Within {HTTP/1.1}",
 	month = "May",
 	year = "2000",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc2817.txt}",
-	url = "http://www.ietf.org/rfc/rfc2817.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc2817}",
+	url = "http://www.ietf.org/rfc/rfc2817"
 }
 
 @Misc{ RFC2818,
@@ -142,8 +160,8 @@
 	title = "{HTTP over TLS}",
 	month = "May",
 	year = "2000",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc2818.txt}",
-	url = "http://www.ietf.org/rfc/rfc2818.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc2818}",
+	url = "http://www.ietf.org/rfc/rfc2818"
 }
 
 @Misc{ RFC2945,
@@ -151,8 +169,8 @@
 	title = "The {SRP} Authentication and Key Exchange System",
 	month = "September",
 	year = "2000",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc2945.txt}",
-	url = "http://www.ietf.org/rfc/rfc2945.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc2945}",
+	url = "http://www.ietf.org/rfc/rfc2945"
 }
 
 @Misc{ RFC2986,
@@ -160,8 +178,8 @@
 	title = "{PKCS 10 v1.7:} Certification Request Syntax Specification",
 	month = "November",
 	year = "2000",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc2986.txt}",
-	url = "http://www.ietf.org/rfc/rfc2986.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc2986}",
+	url = "http://www.ietf.org/rfc/rfc2986"
 }
 
 @Misc{PKIX,
@@ -169,8 +187,8 @@
 	title = "Internet {X.509} Public Key Infrastructure Certificate and Certificate Revocation List {(CRL)} Profile",
 	month = "April",
 	year = "2002",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc3280.txt}",
-	url = "http://www.ietf.org/rfc/rfc3280.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc3280}",
+	url = "http://www.ietf.org/rfc/rfc3280"
 }
 
 @Misc{SSL3,
@@ -178,8 +196,8 @@
 	title = "The Secure Sockets Layer (SSL) Protocol Version 3.0",
 	month = "August",
 	year = "2011",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc6101.txt}",
-	url = "http://www.ietf.org/rfc/rfc6101.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc6101}",
+	url = "http://www.ietf.org/rfc/rfc6101"
 }
 
 @Misc{PKCS12,
@@ -200,8 +218,8 @@
 	title = "Transport Layer Security {(TLS)} Extensions",
 	month = "June",
 	year = "2003",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc3546.txt}",
-	url = "http://www.ietf.org/rfc/rfc3546.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc3546}",
+	url = "http://www.ietf.org/rfc/rfc3546"
 }
 
 @Misc{ TLSSRP,
@@ -209,8 +227,8 @@
 	title = "Using {SRP for TLS} Authentication",
 	month = "November",
 	year = "2007",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc5054.txt}",
-	url = "http://www.ietf.org/rfc/rfc5054.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc5054}",
+	url = "http://www.ietf.org/rfc/rfc5054"
 }
 
 @Misc{ RFC5056,
@@ -218,8 +236,8 @@
 	title = "On the Use of Channel Bindings to Secure Channels",
 	month = "November",
 	year = "2007",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc5056.txt}",
-	url = "http://www.ietf.org/rfc/rfc5056.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc5056}",
+	url = "http://www.ietf.org/rfc/rfc5056"
 }
 
 @Misc{ RFC5929,
@@ -227,8 +245,8 @@
 	title = "Channel Bindings for {TLS}",
 	month = "July",
 	year = "2010",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc5929.txt}",
-	url = "http://www.ietf.org/rfc/rfc5929.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc5929}",
+	url = "http://www.ietf.org/rfc/rfc5929"
 }
 
 @Misc{ TLSPSK,
@@ -236,8 +254,8 @@
 	title = "Pre-shared key Ciphersuites for {TLS}",
 	month = "December",
 	year = "2005",
-	note = "Available from http://www.ietf.org/rfc/rfc4279.txt",
-	url = "http://www.ietf.org/rfc/rfc4279.txt"
+	note = "Available from http://www.ietf.org/rfc/rfc4279",
+	url = "http://www.ietf.org/rfc/rfc4279"
 }
 
 @Misc{ TLSPGP,
@@ -245,8 +263,8 @@
 	title = "{Using OpenPGP Keys for Transport Layer Security (TLS) Authentication}",
 	month = "February",
 	year = "2011",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc6091.txt}",
-	url = "http://www.ietf.org/rfc/rfc6091.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc6091}",
+	url = "http://www.ietf.org/rfc/rfc6091"
 }
 
 @Misc{ RFC4821,
@@ -254,8 +272,8 @@
 	title = "{Packetization Layer Path MTU Discovery}",
 	month = "March",
 	year = "2007",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc4821.txt}",
-	url = "http://www.ietf.org/rfc/rfc4821.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc4821}",
+	url = "http://www.ietf.org/rfc/rfc4821"
 }
 
 @Misc{ TLSCOMP,
@@ -263,8 +281,8 @@
 	title = "Transport Layer Security Protocol Compression Methods",
 	month = "May",
 	year = "2004",
-	note = "Available from \url{http://www.ietf.org/rfc/rfc3749.txt}",
-	url = "http://www.ietf.org/rfc/rfc3749.txt"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc3749}",
+	url = "http://www.ietf.org/rfc/rfc3749"
 }
 
 @Misc{ CBCATT,
