--- a/doc/latex/gnutls.tex
+++ b/doc/latex/gnutls.tex
@@ -1,5 +1,4 @@
 \documentclass[fontsize=10pt,twoside,openright]{scrbook}
-\bibliographystyle{plain}
 
 \usepackage[paperwidth=18.91cm,paperheight=24.589cm,twoside,bindingoffset=11mm,outer=2.2cm,inner=1.2cm,top=2.6cm,bottom=2.5cm]{geometry}
 \usepackage{fancyhdr}
@@ -93,6 +92,7 @@
 \printindex
 \addcontentsline{toc}{chapter}{Index}
 
+\bibliographystyle{abbrv}
 \bibliography{gnutls}
 \addcontentsline{toc}{chapter}{Bibliography}
 
