--- a/NEWS
+++ b/NEWS
@@ -17,10 +17,14 @@ sent that one.
 ** libgnutls: Added functions to parse authority key identifiers
 when stored as a 'general name' and serial combo.
 
+** libgnutls: Added function to force explicit reinitialization
+of PKCS #11 modules. This is required on the child process after
+a fork.
+
 ** API and ABI modifications:
 gnutls_x509_crt_get_authority_key_gn_serial: Added
 gnutls_x509_crl_get_authority_key_gn_serial: Added
-
+gnutls_pkcs11_reinit: Added
 
 * Version 3.0.12 (released 2012-01-20)
 
