Combined ocsp apps to 1 using libcurl.

--- a/doc/cha-gtls-examples.texi
+++ b/doc/cha-gtls-examples.texi
@@ -11,7 +11,7 @@ no error checking.
 @menu
 * Client examples::
 * Server examples::
-* OCSP examples::
+* OCSP example::
 * Miscellaneous examples::
 @end menu
 
@@ -210,28 +210,6 @@ used to serve the example client for anonymous authentication.
 
 @verbatiminclude examples/ex-serv-anon.c
 
-@node OCSP examples
-@section OCSP examples
-
-@menu
-* Generate OCSP request::
-* Verify OCSP response::
-@end menu
-
-@node Generate OCSP request
-@subsection Generate @acronym{OCSP} request
-
-A small tool to generate OCSP requests.
-
-@verbatiminclude examples/ex-ocsp-client.c
-
-@node Verify OCSP response
-@subsection Verify @acronym{OCSP} response
-
-A small tool to verify OCSP responses.
-
-@verbatiminclude examples/ex-ocsp-verify.c
-
 @node DTLS echo server with X.509 authentication
 @subsection DTLS echo server with @acronym{X.509} authentication
 
@@ -239,6 +217,17 @@ This example is a very simple echo server using Datagram TLS and
 @acronym{X.509} authentication.
 
 @verbatiminclude examples/ex-serv-dtls.c
+
+
+@node OCSP example
+@section OCSP example
+
+@anchor{Generate OCSP request}
+@subheading Generate @acronym{OCSP} request
+
+A small tool to generate OCSP requests.
+
+@verbatiminclude examples/ex-ocsp-client.c
 
 @node Miscellaneous examples
 @section Miscellaneous examples
