--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.0.13 (unreleased)
 
+** ocsptool: Added --ask parameter, to verify a certificate's
+status from an ocsp server.
+
 ** command line apps: Use gnu autogen (libopts) to parse command
 line arguments and template files.
 
