--- a/NEWS
+++ b/NEWS
@@ -34,7 +34,7 @@ when stored as a 'general name' and serial combo.
 
 ** libgnutls: Added function to force explicit reinitialization
 of PKCS #11 modules. This is required on the child process after
-a fork.
+a fork (if PKCS #11 functionality is desirable).
 
 ** API and ABI modifications:
 gnutls_verify_stored_pubkey: Added
